Fix display of title and copyright sections on mobile devices

--- a/css/portfolio.less
+++ b/css/portfolio.less
@@ -77,9 +77,8 @@ h3 {
 }
 
 #title-section {
-  height: 100px;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 .kc-contact {
@@ -166,14 +165,7 @@ h3 {
 }
 
 #copyright-section {
-  position: relative;
   margin: 1rem;
-  height: 3rem;
-  p {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
 }
 
 .project-popup {
